--- a/ClientAstree/Views/Complaints/Edit.cshtml
+++ b/ClientAstree/Views/Complaints/Edit.cshtml
@@ -69,8 +69,8 @@
 
     /* Buttons */
     .btn-primary {
-        background-color: #4e6b8b; /* Use lighter shade of blue */
-        border-color: #4e6b8b;
+        background-color: #1E3A7A; /* Use lighter shade of blue */
+        border-color: #1E3A7A;
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
 
