--- a/ClientAstree/Views/PropertyContract/Validated.cshtml
+++ b/ClientAstree/Views/PropertyContract/Validated.cshtml
@@ -15,15 +15,16 @@
 
     .content-container {
         background-color: rgba(255, 255, 255, 0.8); /* White with 80% opacity */
-        padding: 20px;
+        padding: 30px;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         margin: 20px auto;
+        max-width: 80%;
     }
 
-    .table-container {
-        padding: 20px;
-        background-color: rgba(255, 255, 255, 0.8);
+    .table-container, .pagination-container {
+        background-color: rgba(255, 255, 255, 0.8); /* White with 80% opacity */
+        padding: 30px;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         margin-bottom: 20px;
@@ -32,6 +33,61 @@
     .pagination-container {
         padding: 10px;
         margin-bottom: 50px;
+    }
+
+    .table th {
+        background-color: #DEE2E6;
+        color: #212529;
+    }
+
+    .table-striped tbody tr:nth-of-type(odd) {
+        background-color: #F8F9FA;
+    }
+
+    .breadcrumb {
+        background-color: transparent;
+    }
+
+    h2 {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 500;
+        color: #1E3A7A; /* Primary color */
+        font-size: 1.5rem;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .btn {
+        transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .btn-primary {
+        background-color: #1E3A7A; /* Primary color */
+        border-color: #1E3A7A;
+        color: white;
+    }
+
+    .btn-primary:hover {
+        background-color: #c90f1e;
+        filter: brightness(95%);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    }
+
+    .btn-warning {
+        background-color: #FFC107;
+        border-color: #FFC107;
+        color: white;
+    }
+
+    .btn-warning:hover {
+        background-color: #e0a800;
+        filter: brightness(95%);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    }
+
+    .pagination .page-item.active .page-link {
+        background-color: #1E3A7A; /* Primary color */
+        border-color: #1E3A7A;
     }
 </style>
 
@@ -54,7 +110,7 @@
                 </div>
 
                 <div class="table-container">
-                    <table class="table">
+                    <table class="table table-hover table-bordered table-striped">
                         <thead>
                             <tr>
                                 <th>Location</th>
@@ -123,3 +179,5 @@
         </div>
     </div>
 </div>
+
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
