--- a/ClientAstree/Views/Complaints/Submit.cshtml
+++ b/ClientAstree/Views/Complaints/Submit.cshtml
@@ -46,7 +46,7 @@
     }
 
     .form-control:focus, .form-control-file:focus {
-        border-color: #4E6B8B; /* Highlight on focus */
+        border-color: #1E3A7A; /* Highlight on focus */
         box-shadow: none;     /* Remove default focus shadow */
     }
 
@@ -58,8 +58,8 @@
     }
 
     .btn-primary {
-        background-color: #4e6b8b;
-        border-color: #4e6b8b;
+        background-color: #1E3A7A;
+        border-color: #1E3A7A;
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
 
