--- a/ClientAstree/Views/PropertyContract/MyContract.cshtml
+++ b/ClientAstree/Views/PropertyContract/MyContract.cshtml
@@ -14,8 +14,6 @@
         --text-muted-color: #555555;
     }
 
-
-
     body {
         font-family: 'Lato', sans-serif;
         color: var(--text-color);
@@ -37,12 +35,12 @@
     }
 
     .content-container {
-        background-color: var(--background-color);
-        padding: 50px;
-        border-radius: 15px;
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 30px;
+        border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         margin: 20px auto;
-        max-width: 90%;
+        max-width: 80%;
     }
 
     .form-container {
@@ -54,17 +52,21 @@
 
     .form-label {
         color: var(--primary-color);
+        font-size: 0.875rem;
+        font-weight: 500;
     }
 
     .btn-primary {
         background-color: var(--secondary-color);
         border-color: var(--secondary-color);
         color: white;
-        transition: background-color 0.3s ease;
+        transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
 
     .btn-primary:hover {
         background-color: #c90f1e;
+        filter: brightness(95%);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     }
 
     .card {
@@ -118,6 +120,11 @@
     .card-divider {
         border-top: 1px solid lightgray;
         margin: 10px 0;
+    }
+
+    .pagination-container {
+        padding: 10px;
+        margin-bottom: 50px;
     }
 </style>
 
@@ -202,7 +209,7 @@
 
                 <!-- Pagination controls -->
                 <nav aria-label="Page navigation">
-                    <ul class="pagination justify-content-center">
+                    <ul class="pagination justify-content-center pagination-container">
                         @if (ViewBag.PageNumber > 1)
                         {
                             <li class="page-item">
