--- a/ClientAstree/Views/User/Details.cshtml
+++ b/ClientAstree/Views/User/Details.cshtml
@@ -77,8 +77,8 @@
     }
 
     .btn-primary {
-        background-color: #4e6b8b;
-        border-color: #4e6b8b;
+        background-color: #1E3A7A;
+        border-color: #1E3A7A;
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
 
