--- a/ClientAstree/Views/User/UserContract.cshtml
+++ b/ClientAstree/Views/User/UserContract.cshtml
@@ -28,13 +28,13 @@
     }
 
     .card-raised {
-        background-color: #4E6B8B;
+        background-color: #1E3A7A;
         color: white;
     }
 
     .btn-neutral {
         background-color: white;
-        color: #4E6B8B;
+        color: #1E3A7A;
     }
 
     .card-img {
